crates/vexor-compiler/tests/golden/error/input/head_empty.vx
-- head of empty list
export Circle(head(Nil))
